tests/test_data/gke-domain-bucketrepo/expected/extensions/v1beta1/Ingress/bucketrepo.yaml
# Source: jxboot-helmfile-resources/templates/700-bucketrepo-ing.yaml

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: bucketrepo
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: bucketrepo
          servicePort: 80
    host: bucketrepo-jx.mydomain.com
  tls:
  - hosts:
    - bucketrepo-jx.mydomain.com
    secretName: ""
